--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,30 @@
 .blocklyFlyoutScrollbar {
   display: none !important;
 }
+.blocklyToolbox{
+  /* background: orange; */
+  margin: 0px;
+  padding:8px;
+}
+.blocklyTreeSeparator{
+  background: color;
+  color: black;
+  border: 1px solid;
+}
+.blocklyToolboxContents {
+  padding: 0.5em;
+}
+.blocklyToolboxCategory {
+  padding: 3px;
+  margin-bottom: 0.5em;
+  border-radius: 4px;
+}
+
+.blocklyTreeRowContentContainer{
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+}
+.blocklyToolboxCategory {
+  height: initial;
+}
