--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,12 @@
   /* * {
     @apply transition-all duration-300 ease-in-out;
   } */
-  /* a.active {
-    @apply font-extrabold text-lg bg-gray-50 text-slate-950 px-2 py-2 border-3 border-black rounded-2xl drop-shadow-[-2px_2px_0px_rgba(0,0,0,1)] hover:-translate-y-1 hover:translate-x-1 hover:drop-shadow-[-4px_4px_0px_rgba(0,0,0,1)] hover:bg-white hover:scale-105 transition-transform cursor-pointer;
-  } */
+  a.navButtons.active {
+    @apply font-extrabold text-lg bg-slate-50 text-slate-950 border-3 border-black drop-shadow-[-1px_1px_0px_rgba(0,0,0,1)] hover:-translate-y-1 hover:translate-x-1 hover:drop-shadow-[-4px_4px_0px_rgba(0,0,0,1)] hover:bg-white hover:scale-105 ;
+  }
+  .navButtons{
+    @apply  px-2 py-1 hover:bg-white  rounded-2xl transition-all duration-300 ease-in-out cursor-pointer;
+  }
   button{
     @apply cursor-pointer;
   }
