--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
   /* * {
     @apply transition-all duration-300 ease-in-out;
   } */
+  a.topActive.active {
+    @apply bg-white border border-black/10 shadow-lg  text-black;
+  }
   a.navButtons.active {
     @apply font-extrabold text-lg bg-slate-50 text-slate-950 border-3 border-black drop-shadow-[-1px_1px_0px_rgba(0,0,0,1)] hover:-translate-y-1 hover:translate-x-1 hover:drop-shadow-[-4px_4px_0px_rgba(0,0,0,1)] hover:bg-white hover:scale-105 ;
   }
@@ -17,7 +20,7 @@
     @apply flex flex-col items-center;
   }
   .blocklyToolboxCategoryLabel{
-    @apply font-extrabold!
+    @apply text-sm
   }
   .blocklyToolbox {
     @apply flex absolute top-10 left-4! p-0! border-2 border-black drop-shadow-[4px_4px_0_rgba(0,0,0,1)]
@@ -26,13 +29,13 @@
     @apply border-t-3  border-black! rounded-full p-0!
   }
   .blocklyToolboxCategory{
-    @apply px-3! py-2 my-2 rounded-sm hover:drop-shadow-[0_3px_0px_rgba(0,0,0,1)] hover:-translate-y-1 transition-all border-2! 
+    @apply px-3! py-2 my-1 rounded-sm hover:drop-shadow-[0_3px_0px_rgba(0,0,0,1)] hover:-translate-y-1 transition-all border-2! 
   }
   .htmlCategory{
-    @apply  py-2 bg-[#f16529] hover:bg-[#f16529]! border-2! border-black! min-w-[170px]! my-2 hover:drop-shadow-[0_3px_0_black] hover:-translate-y-1 transition-all rounded-sm
+    @apply  py-1 bg-[#f16529] hover:bg-[#f16529]! border-2! border-black! min-w-[170px]! my-1 hover:drop-shadow-[0_3px_0_black] hover:-translate-y-1 transition-all rounded-sm
   }
   .cssCategory{
-    @apply  py-2 bg-[#29a8e0] hover:bg-[#29a8e0]! border-2! border-black! min-w-[170px]! my-2 hover:drop-shadow-[0_3px_0_black] hover:-translate-y-1 transition-all rounded-sm
+    @apply  py-1 bg-[#29a8e0] hover:bg-[#29a8e0]! border-2! border-black! min-w-[170px]! my-1 hover:drop-shadow-[0_3px_0_black] hover:-translate-y-1 transition-all rounded-sm
   }
   .blocklyToolboxCategoryGroup{
     @apply  text-center px-2 bg-sky-200!;
@@ -41,7 +44,7 @@
     @apply font-bold text-center
   }
   .blocklyFlyout{
-    @apply flex absolute top-5 left-5! p-0! border-2 bg-slate-800 border-black drop-shadow-[4px_4px_0_rgba(0,0,0,1)] h-[95%]
+    @apply flex absolute top-5 left-5! p-0! border-2 border-black drop-shadow-[4px_4px_0_rgba(0,0,0,1)] max-h-[95%]!
   }
   .adminButton{
     @apply text-gray-700 hover:bg-gray-50
@@ -51,9 +54,10 @@
   }
 }
 
-.blocklyFlyoutScrollbar {
+.blocklyFlyoutScrollbar{
   display: none !important;
 }
+
 .blocklyToolbox{
   max-height: 90% !important;
   height:fit-content !important;
